@@ -1839,14 +1839,10 @@ event.detector.analogDecreasePeriod={0} has decreased {1} or more in {2}
 event.detector.analogChange={0} has changed {1} or more
 event.detector.analogIncrease={0} has increased {1} or more
 event.detector.analogDecrease={0} has decreased {1} or more
-event.detector.highLimitRateOfChange={0} has exceeded {1} per {2}
-event.detector.highLimitRateOfChangePeriod={0} has exceeded {1} per {2} for more than {3}
-event.detector.highLimitRateOfChangeNotHigher={0} has not exceeded {1} per {2} 
-event.detector.highLimitRateOfChangeNotHigherPeriod={0} has not exceeded {1} per {2} for more than {3}
-event.detector.lowLimitRateOfChange={0} was below {1} per {2}
-event.detector.lowLimitRateOfChangePeriod={0} has been below {1} per {2} for more than {3}
-event.detector.lowLimitRateOfChangeNotLower={0} was not below {1} per {2}
-event.detector.lowLimitRateofChangeNotLowerPeriod={0} has not been below {1} per {2} for more than {3}
+event.detector.rocInstantaneous={0} has a rate of change {1} 
+event.detector.rocInstantaneousDuration={0} has a rate of change {1} for more than {2}
+event.detector.rocAverage={0} has an average rate of change {1} over the last {2}
+event.detector.rocAverageDuration={0} has an average rate of change {1} over the last {2} for more than {3}
 
 event.detectorVo.highLimit=When value is higher than {0}
 event.detectorVo.highLimitPeriod=When value is higher than {0} for {1}
@@ -1878,14 +1874,14 @@ event.detectorVo.analogDecreasePeriod=When decreased {0} or more in {1}
 event.detectorVo.analogChange=When changed {0} or more
 event.detectorVo.analogIncrease=When increased {0} or more
 event.detectorVo.analogDecrease=When decreased {0} or more
-event.detectorVo.highLimitRateOfChange=When rate of change is higher than {0} per {1}
-event.detectorVo.highLimitRateOfChangePeriod=When rate of change is higher than {0} per {1} for {2}
-event.detectorVo.highLimitRateOfChangeNotHigher=When rate of change is not higher than {0} per {1}
-event.detectorVo.highLimitRateOfChangeNotHigherPeriod=When rate of change is not higher than {0} per {1} for {2}
-event.detectorVo.lowLimitRateOfChange=When rate of change is lower than {0} per {1}
-event.detectorVo.lowLimitRateOfChangePeriod=When rate of change is lower than {0} per {1} for {2}
-event.detectorVo.lowLimitRateOfChangeNotLower=When rate of change is not lower than {0} per {1}
-event.detectorVo.lowLimitRateOfChangeNotLowerPeriod=When rate of change is not lower than {0} per {1} for {2}
+event.detectorVo.rocInstantaneous=When rate of change is {0} 
+event.detectorVo.rocInstantaneousDuration=When rate of change is {0} for more than {1}
+event.detectorVo.rocAverage=When average rate of change is {0} over the last {1}
+event.detectorVo.rocAverageDuration=When average rate of change is {0} over the last {1} for more than {2}
+event.detectorVo.roc.greaterThan=greater than {0} {1}
+event.detectorVo.roc.greaterThanEqualTo=greater than or equal to {0} {1}
+event.detectorVo.roc.lessThan=less than {0} {1}
+event.detectorVo.roc.lessThanEqualTo=less than or equal to {0} {1}
 
 
 event.setPoint.targetPointMissing=target point is missing or disabled
