@@ -58,6 +58,7 @@
 * ALPN (Application-Layer Protocol Negotiation) for HTTP/2 on Java 10+, make sure the ALPN startup extension is not in use as that will cause problems
 * Fix bug in ON_CHANGE_INTERVAL logging, prevent errant logging tasks at point termination
 * Use UTF8 for encoding email address names, better language support
+* Adding Rate of Change data point event detector 
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
